# pygrabber

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
src/pygrabber/: grabber.py
