[metadata]
name = pygrabber
version = 0.1.0
description = A job queue management system for distributed computing.

[options]
packages = find:
install_requires =
    toml
    argparse

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    grabber = pygrabber.grabber:main
    grabmaster = pygrabber.grabmaster:main
